@@ -432,6 +432,10 @@ server, see section \ref{sessions} \\
 header for this session \\
 \hline
 
+\texttt{DISCARD\_SESSION} & discard the current browser session \\
+
+\hline
+
 \texttt{JAILCGI} & enable JailCGI \\
 
 \hline
