@@ -46,6 +46,7 @@ TRANSLATE_INVALIDATE = 42
 TRANSLATE_LOCAL_ADDRESS = 43
 TRANSLATE_LOCAL_ADDRESS_STRING = 44
 TRANSLATE_APPEND = 45
+TRANSLATE_DISCARD_SESSION = 46
 
 def _parse_port(address):
     if address[0] == '[':
