@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.5) unstable; urgency=low
 
   * shm: pass MAP_NORESERVE to mmap()
   * proxy-handler: support cookies
+  * translation: added DISCARD_SESSION packet
 
  --
 
